--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title> My First Web Project </title>
-		<link> rel="stylesheet" type="text/css" href="myfirstcss.txt"</link>
+		<link> rel="stylesheet" type="text/css" href="myfirstcssfile.css"</link>
 	</head>	
 	<body>
 		<h1> This is My First Web Application Project. Oh, I'm Excited!</h1>
